<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.practicemvp.login.LoginAcitivty">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/top_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/PasswordBox"
        android:contentDescription="text_field"
        android:inputType="text"
        android:hint="비밀번호"
        android:layout_above="@+id/login_button"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignStart="@+id/login_button" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="로그인"
        android:id="@+id/login_button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/join_button"
        android:layout_alignStart="@+id/join_button" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="회원가입"
        android:id="@+id/join_button"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/emailBox"
        android:contentDescription="text_field"
        android:inputType="text"
        android:hint="이메일"
        android:layout_above="@+id/PasswordBox"
        android:layout_alignLeft="@+id/PasswordBox"
        android:layout_alignStart="@+id/PasswordBox" />


</RelativeLayout>
